--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="132dp"
         android:text="TextView"
         android:textColor="#000000"
         android:textSize="30sp"
@@ -32,11 +32,11 @@
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
     <ImageView
-        android:id="@+id/investMarketFavorite"
+        android:id="@+id/isFavourite"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginEnd="168dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_star_24" />
