--- a/app/src/main/res/layout/fragment_portfolio.xml
+++ b/app/src/main/res/layout/fragment_portfolio.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvInvestPortfolio"
+        android:id="@+id/rvPortfolio"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -14,8 +14,8 @@
         android:id="@+id/btnGoToSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="64dp"
         android:text="Поиск"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
