--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,13 +4,13 @@
 
     <item
         android:id="@+id/portfolio"
-        android:icon="@drawable/ic_portfolio"
-        android:title="Портфель" />
-
-    <item
-        android:id="@+id/search"
         android:icon="@drawable/ic_search"
         android:title="Поиск" />
+
+    <item
+        android:id="@+id/news"
+        android:icon="@drawable/ic_news"
+        android:title="Новости" />
 
     <item
         android:id="@+id/favourite"
